wg-easy_kubefile.yaml
# Generation of Kubernetes YAML is still under development!
#
# Save the output of this file and use kubectl create -f to import
# it into Kubernetes.
#
# Created with podman-3.0.1
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: "2022-01-21T12:07:16Z"
  labels:
    app: wg-easypod
  name: wg-easy_pod
spec:
  containers:
  - args:
    - /usr/bin/dumb-init
    - node
    - server.js
    command:
    - docker-entrypoint.sh
    image: docker.io/weejewel/wg-easy:latest
    name: wg-easy
    ports:
    - containerPort: 51820
      hostPort: 51820
      protocol: UDP
    - containerPort: 51821
      hostPort: 51821
      protocol: TCP
    resources: {}
    securityContext:
      allowPrivilegeEscalation: true
      capabilities:
        add:
        - CAP_NET_ADMIN
        - CAP_NET_RAW
        - CAP_SYS_MODULE
        drop:
        - CAP_MKNOD
        - CAP_AUDIT_WRITE
      privileged: false
      readOnlyRootFilesystem: false
      seLinuxOptions: {}
    volumeMounts:
    - mountPath: /etc/wireguard
      # wg-easy directory, replaceing / with -
      # example: home-user-wg-easy
      name: 
    workingDir: /app
  dnsConfig: {}
  restartPolicy: Never
  volumes:
  - hostPath:
      # wg-easy directory
      # example: /home/user/wg-easy
      path: 
      type: Directory
    # wg-easy directory, replacing / with -
    # example: home-user-wg-easy
    name: 
status: {}
